--- a/HerancaPessoa/nbproject/project.properties
+++ b/HerancaPessoa/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=HerancaPessoa
-main.class=br.com.mariani.controle.PrincipalPessoa
+main.class=br.com.mariani.controle.PrincipalMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
